--- a/src/App.css
+++ b/src/App.css
@@ -42,20 +42,17 @@
 /* mobile mode */
  @media (max-width: 768px) {
   .left-menu {
-    flex-direction: column; /* 세로 배치 */
+    font-size: 10px;
     align-items: flex-start; /* 좌측 정렬 */
   }
 
-  .left-menu a:not(:last-child) { /* .left-menu중 a태그 마지막요소를 제외한 것들 */
-    margin-bottom: 5px;
-  }
+  /* .left-menu a:not(:last-child) { // .left-menu중 a태그 마지막요소를 제외한 것들 
+    margin-left: 1px;
+  } */
 
   .right-menu {
-    flex-direction: column; /* 세로 배치 */
+    font-size: 10px;
     align-items: flex-start; /* 좌측 정렬 */
   }
 
-  .right-menu a:not(:last-child) {
-    margin-bottom: 20px;
-  }
 } 
