--- a/src/css/header/main_img.css
+++ b/src/css/header/main_img.css
@@ -3,3 +3,15 @@ img {
     height: auto; /* 이미지의 높이를 자동으로 조정하여 가로폭에 맞춤 */
   }
 
+.main-image {
+    text-align: center;
+}
+
+
+/* mobile mode */
+@media (max-width: 768px) {
+  img {
+    height: 120px;
+  }
+  
+}
